# PIQUE

./: .gitignore  Makefile.am  NOTICE  README.md  configure.ac  license-boilerplate  licensify.sh  pique-parallel.pc.in  pique.pc.in
include/: Makefile.am
include/pique/convert/: region-convert.hpp
include/pique/convert/cblq/: cblq-to-bitmap-convert.hpp
include/pique/data/: dataset.hpp  grid-subset.hpp  grid.hpp
include/pique/data/hdf5/: dataset-hdf5.hpp
include/pique/data/inmemory/: dataset-inmemory.hpp
include/pique/data/raw/: dataset-raw.hpp
include/pique/encoding/: all-index-encodings.hpp  index-encoding-serialization.hpp  index-encoding.hpp  region-math.hpp
include/pique/encoding/binarycomp/: binarycomp-encoding.hpp
include/pique/encoding/eq/: eq-encoding.hpp
include/pique/encoding/hier/: hier-encoding.hpp
include/pique/encoding/impl/: index-encoding-dispatch.hpp
include/pique/encoding/interval/: interval-encoding.hpp
include/pique/encoding/range/: range-encoding.hpp
include/pique/indexing/: binned-index-types.hpp  binned-index.hpp  binning-spec.hpp  index-builder.hpp  quantization.hpp
include/pique/indexing/impl/: index-builder-impl.hpp  quantization-impl.hpp
include/pique/io/: database.hpp  index-io-cache.hpp  index-io-types.hpp  index-io.hpp
include/pique/io/formats/sharedfile/: sharedfile-format-index-io.hpp
include/pique/io/posix/: posix-index-io.hpp
include/pique/parallel/indexing/: parallel-index-generator.hpp
include/pique/parallel/indexing/impl/: parallel-index-generator-impl.hpp
include/pique/parallel/io/: mpi-index-io.hpp
include/pique/parallel/query/: parallel-query-engine.hpp
include/pique/parallel/util/: gather-serializable.hpp  mpi-stream.hpp
include/pique/query/: basic-query-engine.hpp  bitmap-query-engine.hpp  query-engine.hpp  query.hpp  simple-query-engine.hpp
include/pique/region/: region-encoding.hpp
include/pique/region/bitmap/: bitmap-encode.hpp  bitmap.hpp
include/pique/region/cblq/: cblq-encode.hpp  cblq-traversal.hpp  cblq.hpp
include/pique/region/cii/: cii-decoder.hpp  cii-encode.hpp  cii.hpp
include/pique/region/ii/: ii-encode.hpp  ii.hpp
include/pique/region/impl/: region-encoding-impl.hpp
include/pique/region/wah/: wah-encode.hpp  wah.hpp
include/pique/setops/: setops.hpp
include/pique/setops/bitmap/: bitmap-setops.hpp
include/pique/setops/cblq/: cblq-setops.hpp
include/pique/setops/cii/: cii-setops.hpp
include/pique/setops/ii/: ii-setops.hpp
include/pique/setops/impl/: setops-impl.hpp
include/pique/setops/wah/: wah-setops.hpp
include/pique/stats/: stats.hpp
include/pique/util/: cache-ptr.hpp  compute-exp-level.hpp  datatypes.hpp  dbprintf.hpp  dilate.hpp  dynamic-dispatch.hpp  dynamic-pointer-serialization.hpp  fixed-archive.hpp  interval.hpp  list-setops.hpp  myopts.h  openclose.hpp  precision.hpp  serializable-chunk.hpp  timing.hpp  typeconv.hpp  universal-value.hpp  variant-is-type.hpp  zo-iter2.hpp
include/pique/util/impl/: datatypes-impl.hpp  dilate-impl.hpp  fixed-iarchive-impl.hpp  fixed-oarchive-impl.hpp
src/: Makefile.am
src/convert/cblq/: cblq-to-bitmap-convert.cpp
src/data/hdf5/: dataset-hdf5.cpp
src/encoding/: index-encoding.cpp  region-math.cpp
src/encoding/binarycomp/: binarycomp-encoding.cpp
src/encoding/eq/: eq-encoding.cpp
src/encoding/hier/: hier-encoding.cpp
src/encoding/interval/: interval-encoding.cpp
src/encoding/range/: range-encoding.cpp
src/indexing/: binning-spec.cpp  quantization.cpp
src/io/: database.cpp  index-io-cache.cpp  index-io.cpp
src/io/formats/sharedfile/: sharedfile-format-index-io.cpp
src/io/posix/: posix-index-io.cpp
src/parallel/: Makefile.am
src/parallel/io/: mpi-index-io-control.cpp  mpi-index-io.cpp
src/query/: basic-query-engine.cpp  bitmap-query-engine.cpp  query-engine.cpp  query.cpp  simple-query-engine.cpp
src/region/: region-encoding.cpp
src/region/bitmap/: bitmap-encode.cpp  bitmap.cpp
src/region/cblq/: cblq-encode.cpp  cblq-io.cpp  cblq-ridconv.cpp  cblq-semiwords.cpp  cblq.cpp
src/region/cii/: cii-decoder.cpp  cii-encode.cpp  cii.cpp
src/region/ii/: ii-encode.cpp  ii.cpp
src/region/wah/: wah-encode.cpp  wah.cpp
src/setops/: preflist-setops.cpp  setops.cpp
src/setops/bitmap/: bitmap-setops.cpp
src/setops/cblq/: cblq-setops-actiontables.c  cblq-setops-actiontables.h  cblq-setops-fast.cpp  cblq-setops-nary1.cpp  cblq-setops-nary2-dense.cpp  cblq-setops-nary3-dense.cpp  cblq-setops-nary3-fast.cpp  cblq-setops.cpp
src/setops/cii/: cii-setops.cpp
src/setops/ii/: ii-setops.cpp
src/setops/wah/: wah-setops.cpp
src/util/: datatypes.cpp  fixed-archive.cpp  myopts.c
tests/: Makefile.am  test-index-binorder.cpp  test-quantization.cpp
tests/io/: test-database-index-build.cpp  test-database-loadsave.cpp  test-dataset-index-build.cpp  test-index-io-cache.cpp  test-index-io.cpp  test-region-serialize.cpp  test-subset-datastream.cpp
tests/manual-tests/: test-cblq-build.cpp  test-cblq-dense.cpp  test-cblq-dense2.cpp  test-cblq-intersect.cpp  test-cblq-semiwords.cpp
tests/parallel/: Makefile.am  test-mpi-gather-stream.cpp  test-mpi-gather-stream.sh  test-mpi-stream-buffering.cpp  test-mpi-stream-device.cpp  test-parallel-index-gen.cpp  test-parallel-index-gen.sh  test-parallel-index-io.cpp  test-parallel-index-io.sh
tests/query/: test-expl-binning.cpp  test-query-binnings.cpp  test-query-encodings.cpp  test-query-engines.cpp  test-query-io.cpp
tests/region/: test-bitmap-bitcount.cpp  test-bitmap-conv.cpp  test-cii-decode.cpp  test-region-ridconv.cpp
tests/setops/: test-cblq-setops.cpp  test-cii-setops.cpp  test-setops-simplify.cpp  test-setops.cpp
tests/testutil/: make-index.hpp  standard-datasets.hpp  write-and-verify-index.hpp  write-dataset-metafile.hpp
tests/util/: test-cache-ptr.cpp  test-dilate.cpp  test-zo-iter.cpp
tools/: Makefile.am  build-index-parallel.cpp  build-index.cpp  build-meta.cpp  index-info.cpp  query-helper.cpp  query-helper.hpp  query-main.cpp
tools/misc/: characterize-dataset.cpp  quantize-equibin.cpp  quantize.cpp  tableflip.cpp
(+9 files in other folders)
