#
# Copyright 2015 David A. Boyuka II
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Note:
# nobase = don't strip leading path (so pique/indexing/quantization.hpp is
#          copied to <includedir>/pique/indexing/quantization.hpp, instead
#          of <includedir/quantization.hpp as per default).
# include_HEADERS = headers to install into the user's <includedir>

nobase_include_HEADERS =

nobase_include_HEADERS += \
	pique/indexing/quantization.hpp \
	pique/indexing/binned-index-types.hpp \
	pique/indexing/impl/quantization-impl.hpp \
	pique/indexing/impl/index-builder-impl.hpp \
	pique/indexing/index-builder.hpp \
	pique/indexing/binning-spec.hpp \
	pique/indexing/binned-index.hpp

nobase_include_HEADERS += \
	pique/region/bitmap/bitmap.hpp \
	pique/region/bitmap/bitmap-encode.hpp \
	pique/region/cblq/impl/cblq-traversal-impl.hpp \
	pique/region/cblq/impl/cblq-traversal-df-impl.hpp \
	pique/region/cblq/cblq-traversal.hpp \
	pique/region/cblq/cblq-encode.hpp \
	pique/region/cblq/cblq.hpp \
	pique/region/ii/ii-encode.hpp \
	pique/region/ii/ii.hpp \
	pique/region/impl/region-encoding-impl.hpp \
	pique/region/wah/wah.hpp \
	pique/region/wah/wah-encode.hpp \
	pique/region/region-encoding.hpp \
	pique/region/cii/cii-encode.hpp \
	pique/region/cii/cii.hpp \
	pique/region/cii/cii-decoder.hpp

nobase_include_HEADERS += \
	pique/setops/bitmap/bitmap-setops.hpp \
	pique/setops/cblq/cblq-setops.hpp \
	pique/setops/setops.hpp \
	pique/setops/ii/ii-setops.hpp \
	pique/setops/impl/setops-impl.hpp \
	pique/setops/wah/wah-setops.hpp \
	pique/setops/cii/cii-setops.hpp
	
nobase_include_HEADERS += \
	pique/encoding/binarycomp/binarycomp-encoding.hpp \
	pique/encoding/interval/interval-encoding.hpp \
	pique/encoding/range/range-encoding.hpp \
	pique/encoding/index-encoding.hpp \
	pique/encoding/hier/hier-encoding.hpp \
	pique/encoding/impl/index-encoding-dispatch.hpp \
	pique/encoding/eq/eq-encoding.hpp \
	pique/encoding/index-encoding-serialization.hpp \
	pique/encoding/region-math.hpp \
	pique/encoding/all-index-encodings.hpp

nobase_include_HEADERS += \
	pique/convert/region-convert.hpp \
	pique/convert/cblq/cblq-to-bitmap-convert.hpp
	
nobase_include_HEADERS += \
	pique/data/inmemory/dataset-inmemory.hpp \
	pique/data/grid.hpp \
	pique/data/grid-subset.hpp \
	pique/data/raw/dataset-raw.hpp \
	pique/data/dataset.hpp \
	pique/data/hdf5/dataset-hdf5.hpp
	
nobase_include_HEADERS += \
	pique/io/index-io.hpp \
	pique/io/database.hpp \
	pique/io/index-io-types.hpp \
	pique/io/formats/sharedfile/sharedfile-format-index-io.hpp \
	pique/io/index-io-cache.hpp \
	pique/io/posix/posix-index-io.hpp

nobase_include_HEADERS += \
	pique/query/query-engine.hpp \
	pique/query/simple-query-engine.hpp \
	pique/query/basic-query-engine.hpp \
	pique/query/bitmap-query-engine.hpp \
	pique/query/query.hpp
	
nobase_include_HEADERS += \
	pique/parallel/util/gather-serializable.hpp \
	pique/parallel/util/mpi-stream.hpp \
	pique/parallel/query/parallel-query-engine.hpp \
	pique/parallel/indexing/impl/parallel-index-generator-impl.hpp \
	pique/parallel/indexing/parallel-index-generator.hpp \
	pique/parallel/io/mpi-index-io.hpp \
	pique/parallel/io/impl/mpi-index-io-control.hpp
	
nobase_include_HEADERS += \
	pique/stats/stats.hpp
	
nobase_include_HEADERS += \
	pique/util/dynamic-pointer-serialization.hpp \
	pique/util/timing.hpp \
	pique/util/precision.hpp \
	pique/util/serializable-chunk.hpp \
	pique/util/typeconv.hpp \
	pique/util/cache-ptr.hpp \
	pique/util/datatypes.hpp \
	pique/util/impl/fixed-iarchive-impl.hpp \
	pique/util/impl/fixed-oarchive-impl.hpp \
	pique/util/impl/dilate-impl.hpp \
	pique/util/impl/datatypes-impl.hpp \
	pique/util/dynamic-dispatch.hpp \
	pique/util/compute-exp-level.hpp \
	pique/util/openclose.hpp \
	pique/util/interval.hpp \
	pique/util/myopts.h \
	pique/util/variant-is-type.hpp \
	pique/util/zo-iter2.hpp \
	pique/util/list-setops.hpp \
	pique/util/universal-value.hpp \
	pique/util/dbprintf.hpp \
	pique/util/dilate.hpp \
	pique/util/fixed-archive.hpp

noinst_HEADERS =  
